k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: instapay-prod
  labels:
    name: instapay-prod
    environment: prod
