k8s/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: instapay-prod
  labels:
    app: frontend
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      environment: prod
  template:
    metadata:
      labels:
        app: frontend
        environment: prod
    spec:
      containers:
      - name: frontend
        image: instapay-frontend:prod
        ports:
        - containerPort: 80
