k8s/prod/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: instapay-prod
  labels:
    app: postgres
    environment: prod
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: postgres
      environment: prod
  template:
    metadata:
      labels:
        app: postgres
        environment: prod
    spec:
      containers:
      - name: postgres
        image: postgres:17
        volumeMounts:
        - name: initdb-scripts
          mountPath: /docker-entrypoint-initdb.d
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
      - name: initdb-scripts
        configMap:
          name: postgres-initdb-configmap
