k8s/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: instapay-prod
  labels:
    app: frontend
    environment: prod
spec:
  selector:
    app: frontend
    environment: prod
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
