k8s/prod/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: instapay-prod

spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
