k8s/prod/transaction-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: instapay-prod

spec:
  selector:
    app: transaction-service
  ports:
    - port: 3002
      targetPort: 3002
